--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,18 @@ dependencies = [
     "fastmcp>=0.1.0",
 ]
 requires-python = ">=3.10"
+readme = "README.md"
+license = {text = "MIT"}
+keywords = ["mcp", "pharo", "smalltalk", "server"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11", 
+    "Programming Language :: Python :: 3.12",
+]
 
 [build-system]
 requires = ["hatchling"]
