--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pharo-mcp-server"
+name = "pharo-nc-mcp-server"
 version = "0.1.0"
 description = "A local MCP server to evaluate Pharo Smalltalk expressions"
 authors = [
@@ -38,7 +38,7 @@ dev-dependencies = [
 ]
 
 [project.scripts]
-pharo-mcp-server = "pharo_mcp_server.server:mcp.run"
+pharo-nc-mcp-server = "pharo_nc_mcp_server.server:mcp.run"
 
 [tool.mdformat]
 wrap = 120
