--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Check code formatting
       run: |
-        uv run black --check pharo_mcp_server/
-        uv run ruff check pharo_mcp_server/
+        uv run black --check pharo_nc_mcp_server/
+        uv run ruff check pharo_nc_mcp_server/
 
     - name: Check markdown formatting  
       run: uv run mdformat --check README.md scripts/README.md
